--- a/index.html
+++ b/index.html
@@ -1113,7 +1113,7 @@
             </div>
           </div>
           <div class="row">
-
+            <!-- MARCUS -->
             <div class="col-md col-lg">
               <div class="card card-guests">
                 <div class="card-img-box">
@@ -1131,13 +1131,44 @@
               </div>
             </div>
 
+            <!-- IDALINA -->
+            <div class="col-md col-lg">
+              <div class="card card-guests">
+                <div class="card-img-box">
+                  <img src="/src/assets/caisTech2023/mesaRedonda/Idalina.svg" alt="" />
+                </div>
+                <div class="card-body guests-info">
+                  <h3>Idalina da Rocha Sá</h3>
+                  <p>
+                    Psicóloga do Instituto Federal de Educação, Ciência e Tecnologia do Piauí - IFPI, campus Floriano. Pós graduada em Psicologia Educacional e Escolar pelo Instituto Camilo Filho e Mestre em Educação pela UNINOVE.
+                  </p>
+                </div>
+              </div>
+            </div>
+
+            <!-- RAFAEL -->
+            <div class="col-md col-lg">
+              <div class="card card-guests">
+                <div class="card-img-box">
+                  <img src="/src/assets/caisTech2023/mesaRedonda/Rafael.svg" alt="" />
+                </div>
+                <div class="card-body guests-info">
+                  <h3>Rafael Ângelo</h3>
+                  <p>
+                    Coordenador de Pesquisa e Inovação do Campus Floriano e Doutor em Ciência da Propriedade Intelectual.
+                  </p>
+                </div>
+              </div>
+            </div>
+
+            <!-- JAIRO -->
             <div class="col-md col-lg">
               <div class="card card-guests">
                 <div class="card-img-box">
                   <img src="/src/assets/caisTech2023/mesaRedonda/Jairo.svg" alt="" />
                 </div>
                 <div class="card-body guests-info">
-                  <h3>Jairo de Sousa Lima</h3>
+                  <h3>Jairo Lima</h3>
                   <p>
                     Mestre em Direito pela UFPI (2022). Pós-graduado em Direito Penal e Processual Penal pela
                     Uninovafapi (2019). Possui graduação em Direito pela Faculdade de Ensino Superior de Floriano
@@ -1150,13 +1181,14 @@
               </div>
             </div>
 
+            <!-- SILVINO -->
             <div class="col-md col-lg">
               <div class="card card-guests">
                 <div class="card-img-box">
                   <img src="src/assets/caisTech2023/mesaRedonda/Silvo.svg" alt="" />
                 </div>
                 <div class="card-body guests-info">
-                  <h3>Silvino Marques da Silva Júnior</h3>
+                  <h3>Silvino Júnior</h3>
                   <p>
                     Professor de Educação Básica, Técnica e Tecnológica do Instituto Federal do Piauí - Campus Floriano,
                     na área de Tecnologia da Informação e Comunicação. Mestre em Tecnologia e Gestão em Educação a
