change_links_inscr

--- a/index.html
+++ b/index.html
@@ -42,7 +42,14 @@
               <li><a href="#programs">Programação</a></li>
               <li><a href="#questions">Duvidas</a></li>
               <li><a href="#contact">Contato</a></li>
-              <li><a class="btn-ticket"  href="https://suap.ifpi.edu.br/eventos/inscricao_publica/596/" target="_blank">Inscrever-se</a></li>
+              <li><a 
+                class="btn-ticket"
+                role="button" 
+                aria-disabled="true"
+              >
+              inscrições Encerradas
+              </a>
+            </li>
             </ul>
           </div>
           <div class="menu-toggle" onclick="openNav()">
@@ -921,8 +928,13 @@
 
           </div>
 
-          <a href="https://suap.ifpi.edu.br/eventos/inscricao_publica/596/" target="_blank" class="btn-join">Quero participar das
-            atividades</a>
+          <a 
+            class="btn-join"
+            role="button" aria-disabled="true"
+          >
+            Quero participar das
+            atividades
+          </a>
         </div>
       </div>
     </section>
@@ -1200,26 +1212,6 @@
                 </div>
               </div>
             </div>
-
-            <!-- <div class="col-md col-lg" hidden>
-                <div class="card card-guests">
-                  <div class="card-img-box">
-                    <img
-                      src="/src/assets/palestrantes/Lucas Soares.webp"
-                      alt=""
-                    />
-                  </div>
-                  <div class="card-body guests-info">
-                    <h3>Lucas Soares</h3>
-                    <p>
-                      Formado em Tecnologia em Análise e Desenvolvimento de
-                      Sistemas pelo IFPI Floriano. Atualmente trabalha como
-                      Senior Software Engineer na squad de Pagamentos da tribo
-                      de Cartões de Crédito no Will Bank.
-                    </p>
-                  </div>
-                </div>
-              </div> -->
 
           </div>
         </div>
@@ -1730,10 +1722,8 @@
 
             <div class="img-sponsors" hidden>
               <a href="https://virtex.com.br" target="_blank"><img
-                  src="src/assets/caisTech2023/patrocinadores/virtex.png" alt="" /></a>
-              <!-- <a href="http://brnx.com.br" target="_blank"
-                  ><img src="/src/assets/brnx.svg" alt=""
-                /></a> -->
+                  src="src/assets/caisTech2023/patrocinadores/virtex.png" alt="" />
+              </a>
             </div>
           </div>
 
@@ -1746,7 +1736,7 @@
               </a>
 
               <!-- KNN IDIOMAS -->
-              <a href=""       
+              <a href="https://www.instagram.com/knnidiomasfloriano/"       
                 target="_blank"><img style="width: 250px"
                 src="/src/assets/caisTech2023/patrocinadores/knntheworld.png" alt="" />
               </a>
@@ -1763,13 +1753,30 @@
               <!-- CARVALHO FERREIRA -->
               <a href="https://instagram.com/cfassessoriacontabil?igshid=YmMyMTA2M2Y=" target="_blank"><img
                   style="width: 250px" src="/src/assets/caisTech2023/patrocinadores/CarvalhoFerreira.svg" alt="" /></a>
+
               <!-- VIRTEX -->
-              <a href="" target="_blank"><img
-                  style="width: 250px" src="src/assets/caisTech2023/patrocinadores/virtex.png" alt="" /></a>
+              <a href="https://virtex.com.br" target="_blank"><img
+                  style="width: 250px" src="src/assets/caisTech2023/patrocinadores/virtex.png" alt="" />
+              </a>
+
               <!-- O BOTICÁRIO-->
-              <a href="" target="_blank"><img
+              <a href="https://www.instagram.com/oboticario_floriano/" target="_blank"><img
                   style="width: 250px" src="/src/assets/caisTech2023/patrocinadores/obticario.jpg" alt="" />
               </a>
+
+              <!-- VITTRY STORE -->
+              <a href="https://www.instagram.com/vittrystore/" target="_blank">
+                <img
+                  style="width: 250px" src="/src/assets/caisTech2023/patrocinadores/vittry_store.jpg" alt="" 
+                />
+              </a>
+              <!-- SER_CAR -->
+              <a href="https://www.instagram.com/servcar_autocenter/" target="_blank">
+                <img
+                  style="width: 250px" src="/src/assets/caisTech2023/patrocinadores/serv_car.jpg" alt="" 
+                />
+              </a>
+
             </div>
           </div>
           <div class="box-support pt-5">
